--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     //implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+
+    implementation 'com.github.yangjie10930:EpMedia:v1.0.1'
 }
