--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
@@ -39,9 +42,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.writingminds:FFmpegAndroid:0.3.2'
+    //implementation 'com.arthenica:mobile-ffmpeg-full:4.4'
     implementation 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
     //implementation 'com.dinuscxj:circleprogressbar:1.3.6'
     //implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
+
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 }
